WebConsole 2.1.3
================

Fixes:

  - Fixed : Console fails to load in Chrome on Mac (WEBCONSOLE-60)
  - Fixed : Console fails to load when cookies are disabled (WEBCONSOLE-61)
  - Fixed : Console fails to load in QtWebkit Browser (WEBCONSOLE-62)
  - Fixed : Having a button with both a navigation and command,
    the navigation occurs but the command is not executed (WEBCONSOLE-64)
  - Fixed : Thumb rendered on slider, even "empty" png file
    has been assigned as thumb image (WEBCONSOLE-65)
  - Fixed : Incorrect SVN build reported by WebConsole (WEBCONSOLE-66)
  - Fixed : Controller discovery icon continues to indicate
    that discovery is in progress when it fails for some reason
    (WEBCONSOLE-69)
  - Fixed : Loading spinner not animating on certain browser versions 
    (WEBCONSOLE-70)

New features:

  - Support relative URLs in the web view widget (WEBCONSOLE-71)
  - Add GET parameters to specify a controller
    and panel combination to load at startup (WEBCONSOLE-72)

WebConsole 2.1.2
================

  - A label connected to a 'switch' type sensor was always
    showing text 'on/off' instead of the text values
    configured in the label for on/off states (WEBCONSOLE-57,
    Richard Turner)
  - Treat Midori web browser as a desktop (mouse control)
    browser rather than mobile (touch controlled) browser
    by default (WEBCONSOLE-59, Richard Turner)


WebConsole 2.1.1
================

 Bug fix release:

  - WEBCONSOLE-56: Fix to prevent Console from hanging at 
    loading screen if an invalid response is received from 
    Controller (Richard Turner)